apply plugin: "java"
apply plugin: 'maven'

version '1.0'

sourceCompatibility = 1.14

sourceSets.main.java.srcDirs = ["src"]

repositories{
    mavenCentral()
    maven{ url 'https://www.jitpack.io' }
}

ext{
    //the build number that this plugin is made for
    mindustryVersion = 'v126.2'
    ghpHash = '26b7bd47a0'
    arcHash = { return '1b24d685ea94dd40244be869e70671080e950825'}

    getGHPModule = {
        if (new File(projectDir.parent, '/GHPluginUtil/').exists())
            return files("../GHPluginUtil/build/libs/GHPluginUtil.jar")
        else
            return "com.github.Gee-aitcH:GHPluginUtil:$ghpHash"
    }
}

dependencies {
    implementation getGHPModule()
    compileOnly "com.github.Anuken.Arc:arc-core:" + arcHash()
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
}

jar{
    archiveFileName = "${project.archivesBaseName}.jar"
    from{
        configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
    }

    from(rootDir){
        include "plugin.json"
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}